--- a/index.html
+++ b/index.html
@@ -3,46 +3,45 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <!--google fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+    <!--css file-->
+    <link rel="stylesheet" type="text/css" href="compiled.css">
 
     <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-        .attribution {
-            font-size: 11px;
-            text-align: center;
-        }
 
-        .attribution a {
-            color: hsl(228, 45%, 44%);
-        }
-
-    </style>
 </head>
 
 <body>
+    <main>
 
-    “ I’ve been interested in coding for a while but never taken the jump, until now.
-    I couldn’t recommend this course enough. I’m now in the job of my dreams and so
-    excited about the future. ”
+        <div class="right">
+            <div class="first-slide"></div>
+            <div class="slider">
+                <div class="previous"></div>
+                <div class="next"></div>
+            </div>
+        </div>
 
-    Tanya Sinclair
-    UX Engineer
+        <div class="left">
+            <div class="quote"></div>
+            <p>
+                " I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. I'm now in the job of my dreams and so excited about the future. "
+            </p>
 
-    “ If you want to lay the best foundation possible I’d recommend taking this course.
-    The depth the instructors go into is incredible. I now feel so confident about
-    starting up as a professional developer. ”
+            <p>
+                Tanya Sinclair <span>UX Engineer</span>
+            </p>
 
-    John Tarkpor
-    Junior Front-end Developer
+        </div>
 
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
-    </div>
-</body>
+        <div class="bottom"></div>
 
-</html>
+    </main>
+
+</body></html>
