--- a/index.html
+++ b/index.html
@@ -14,34 +14,35 @@
 
     <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
 
-
 </head>
 
 <body>
     <main>
 
         <div class="right">
-            <div class="first-slide"></div>
+            <div id="slide" class="slide"></div>
             <div class="slider">
-                <div class="previous"></div>
-                <div class="next"></div>
+                <div id="previous" class="previous"></div>
+                <div id="next" class="next"></div>
             </div>
         </div>
 
         <div class="left">
             <div class="quote"></div>
-            <p>
+            <p id="main">
                 " I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. I'm now in the job of my dreams and so excited about the future. "
             </p>
 
-            <p>
-                Tanya Sinclair <span>UX Engineer</span>
-            </p>
+            <span id="name">Tanya Sinclair </span>
+            
+            <span id="job">UX Engineer</span>
 
         </div>
 
         <div class="bottom"></div>
 
     </main>
+    
+    <script src="script.js" ></script>
 
 </body></html>
