edit image slide for desktop design

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <main>
 
         <div class="right">
-            <div id="slide" class="slide"></div>
+            <div id="slide" class="slide">
+                <img class="image-1" src="./images/image-tanya.jpg" alt="IMG">
+                <img class="image-2" src="./images/image-john.jpg" alt="IMG">
+            </div>
             <div class="slider">
                 <div id="previous" class="previous"></div>
                 <div id="next" class="next"></div>
@@ -29,20 +32,28 @@
 
         <div class="left">
             <div class="quote"></div>
-            <p id="main">
+            <p id="main-1">
                 " I've been interested in coding for a while but never taken the jump, until now. I couldn't recommend this course enough. I'm now in the job of my dreams and so excited about the future. "
             </p>
-
-            <span id="name">Tanya Sinclair </span>
             
-            <span id="job">UX Engineer</span>
+            <p id="main-2">
+                " If you want to lay the best foundation possible I'd recommend taking this course. The depth the instructions go into is incredible. I now feel so confident about starting up as a professional developer. "
+            </p>
+
+            <span id="name-1">Tanya Sinclair  </span>
+            <span id="name-2">John Tarkpor  </span>
+
+            <span id="job-1">UX Engineer</span>
+            <span id="job-2">Junior Front-end Developer</span>
 
         </div>
 
         <div class="bottom"></div>
 
     </main>
-    
-    <script src="script.js" ></script>
 
-</body></html>
+    <script src="script.js"></script>
+
+</body>
+
+</html>
